--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,9 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/category.js"></script>
+    <script src="js/categoryService.js"></script>
+    <script src="js/categoryList.js"></script>
   </head>
 
   <body ng-app="starter">
