Create new project

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/category.js"></script>
     <script src="js/categoryService.js"></script>
     <script src="js/categoryList.js"></script>
+    <script src="js/feedView.js"></script>
   </head>
 
   <body ng-app="starter">
