--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,12 @@
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="lib/tab/tabSlideBox.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+    <script src="lib/tab/tabSlideBox.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -24,6 +26,7 @@
     <script src="js/categoryService.js"></script>
     <script src="js/categoryList.js"></script>
     <script src="js/feedView.js"></script>
+    <script src="js/viewPager.js"></script>
   </head>
 
   <body ng-app="starter">
