Create new project

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.1.0.slim.min.js"   integrity="sha256-cRpWjoSOw5KcyIOaZNo4i6fZ9tKPhYYb6i5T9RSVJG8="   crossorigin="anonymous"></script>
+
     <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -22,6 +24,8 @@
     <script src="js/controllers.js"></script>
     <script src="js/category.js"></script>
     <script src="js/categoryService.js"></script>
+    <script src="js/cache.js"></script>
+
     <script src="js/categoryList.js"></script>
     <script src="js/feedView.js"></script>
     <script src="js/viewPager.js"></script>
