--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,8 @@
     <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
