--- a/www/index.html
+++ b/www/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <title></title>
 
 
-    <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- compiled css output -->
+        <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+        <link href="css/ionic.app.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
+        <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+        <!-- ionic/angularjs js -->
+        <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+        <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
+        <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
 
-    <script src="cordova.js"></script>
+        <!-- cordova script (this will be a 404 during development) -->
+        <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/category.js"></script>
-    <script src="js/categoryService.js"></script>
-    <script src="js/cache.js"></script>
+        <script src="cordova.js"></script>
 
-    <script src="js/categoryList.js"></script>
-    <script src="js/feedView.js"></script>
-    <script src="js/viewPager.js"></script>
-  </head>
+        <!-- your app's js -->
+        <script src="js/app.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/category.js"></script>
+        <script src="js/categoryService.js"></script>
+        <script src="js/cache.js"></script>
 
-  <body ng-app="starter">
+        <script src="js/categoryList.js"></script>
+        <script src="js/feedView.js"></script>
+        <script src="js/viewPager.js"></script>
+    </head>
+
+    <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
-  </body>
+</body>
 </html>
