--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet">
 
         <link href="css/ionic.app.css" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="css/style.min.css" rel="stylesheet">
         <link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- ionic/angularjs js -->
@@ -18,6 +18,7 @@
 
         <script src="lib/angular-filter/dist/angular-filter.min.js"></script>
         <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
+        <script src="lib/ngstorage/ngStorage.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
